welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:6: error: type mismatch;
 found   : Unit
 required: Boolean
	}else if (weekday && !vacation){
              ^