welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	var weekday=false
	var vacation=false
	if (vacation==true) { 
		return true
	}else if (weekday && !vacation){
		return false
	} 
	
}
